--- a/.github/workflows/first.yml
+++ b/.github/workflows/first.yml
@@ -11,7 +11,7 @@ jobs:
   build: 
     runs-on: ubuntu-latest
     steps: 
-      -users: actions/checkout@v3
+      -uses: actions/checkout@v3
       
       -name: Run a one-line script
       run: echo HELLO Design Patterns
