--- a/.github/workflows/first.yml
+++ b/.github/workflows/first.yml
@@ -11,13 +11,12 @@ jobs:
   build: 
     runs-on: ubuntu-latest
     steps: 
-      -uses: actions/checkout@v3
-      
-      -name: Run a one-line script
-      run: echo HELLO Design Patterns
+     - uses: actions/checkout@v3
+       - name: Run a one-line script
+        run: echo Hello, world!
 
-      -name: Run a multi-line script
-      run: |
+      - name: Run a multi-line script
+        run: |
           echo Add other actions to build,
           echo test, and deploy your project.
 
